--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -31,4 +31,10 @@ jobs:
     - name: installing surge
       run: npm install --global surge
     - name: deploying using surge
-      run: surge -/ mishabootcamp.surge.sh --token $ {{ secrets.SURGE_TOKEN}}
+      run: surge -/ mishabootcamp.surge.sh --token ${{ secrets.SURGE_TOKEN}}
+      
+
+
+      name: Deploy Website
+
+          
