--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -30,8 +30,8 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: installing surge
       run: npm install --global surge
-    - name: deploying using surge
-      run: surge -/ mishabootcamp.surge.sh --token ${{ secrets.SURGE_TOKEN}}
+    - name: deploying using surge    
+      run: surge ./ mishabootcamp.surge.sh --token ${{ secrets.SURGE_TOKEN}}
       
 
 
